Fix(icon): small adjust (alignment)

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -20,7 +20,7 @@ page-home {
     width: 35px;
     height: 35px;
     padding-top: 10px;
-    padding-right: 3px;
+    padding-right: 5px;
     .account-initials {
       display: inline-block;
       visibility: hidden;
@@ -35,7 +35,7 @@ page-home {
     width: 25px;
     height: 25px;
     padding-top: 7px;
-    padding-right: 2px;
+    padding-right: 4px;
     .account-initials {
       width: 6px;
     }
