--- a/src/pages/settings/settings.scss
+++ b/src/pages/settings/settings.scss
@@ -32,7 +32,7 @@ page-about {
     width: 60px;
     height: 60px;
     padding-top: 15px;
-    padding-left: 9px;
+    padding-left: 8px;
     .account-initials {
       display: inline-block;
       visibility: hidden;
